--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
             {i, ["include"]}]}.
 {sub_dirs,["rel"]}.
 {deps,[
-
+    {meck, ".*", {git, "git@github.com:eproxus/meck.git", "0.8.3"}}
  ]}.
 
 {ct_dir, "test"}.
