--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info,
             {i, ["include"]}]}.
 {deps,[
-    {meck, ".*", {git, "git@github.com:eproxus/meck.git", "0.8.3"}}
+    {meck, ".*", {git, "https://github.com/eproxus/meck.git", "0.8.3"}}
  ]}.
 
 {covertool_prefix_len, 2}. % Optional: Use module prefix as (imaginary) package name
