Rename to gen_tw.  Fixed an issue with rollback wrt event handling.

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,16 @@
 {erl_opts, [debug_info,
             {i, ["include"]}]}.
+
+{erl_first_files,
+ ["src/tw_actor.erl"
+ ]}.
+
 {deps,[
     {meck, ".*", {git, "https://github.com/eproxus/meck.git", "0.8.3"}}
  ]}.
 
+{eunit_opts, [verbose]}.
+{cover_enabled, true}.
 {covertool_prefix_len, 2}. % Optional: Use module prefix as (imaginary) package name
 {xref_checks, [undefined_function_calls,
                undefined_functions,
