--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,8 @@
  ]}.
 
 {deps,[
-    {meck, ".*", {git, "https://github.com/eproxus/meck.git", "0.8.3"}}
+    {meck, ".*", {git, "https://github.com/eproxus/meck.git", "0.8.3"}},
+    {'uuid', ".*", {git, "https://github.com/avtobiff/erlang-uuid.git", "v0.4.7"}}
  ]}.
 
 {eunit_opts, [verbose]}.
