--- a/rebar.config
+++ b/rebar.config
@@ -6,8 +6,8 @@
  ]}.
 
 {deps,[
-    {meck, ".*", {git, "https://github.com/eproxus/meck.git", "0.8.3"}},
-    {'uuid', ".*", {git, "https://github.com/avtobiff/erlang-uuid.git", "v0.5.0"}}
+    {meck, ".*", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.3"}}},
+    {'uuid', ".*", {git, "https://github.com/avtobiff/erlang-uuid.git", {tag, "v0.5.0"}}}
  ]}.
 
 {eunit_opts, [verbose]}.
